foreign-arrow-ffm: a table into in-process Rust as the Arrow C Data Interface — okay_exchange_table, WireLink.Tables, CDataCodec (OkayCData default, ApacheCData by import); 5.8x on 1M rows; tests, docs, Decision 21 results, changelog, off the sprint
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD